objects/Interim_Registration__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account look up field</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Interim Registrations</relationshipLabel>
        <relationshipName>Interim_Registrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>App_Code__c</fullName>
        <label>App Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Name__c</fullName>
        <formula>IF(App_Code__c==&apos;cos&apos;,  $Label.COS_App_Name ,
IF(App_Code__c==&apos;lms&apos;,  $Label.LMS_App_Name ,
IF(App_Code__c==&apos;cdotcom&apos;,  $Label.Cadence_App_Name ,
IF(App_Code__c==&apos;edtap&apos;,  $Label.EDTAP_App_Name , &apos;&apos;) )
)
)</formula>
        <label>Application Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COS_Acceptance_Date__c</fullName>
        <description>Field for capturing the date and time of Terms Of Use acceptance for COS Application</description>
        <label>COS Acceptance Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Content_Language__c</fullName>
        <label>Content Language</label>
        <picklist>
            <picklistValues>
                <fullName>Japanese</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Japanese and English</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_Identifier_Key__c</fullName>
        <externalId>true</externalId>
        <label>Email Identifier Key</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Encrypted_Okta_Secret_Answer__c</fullName>
        <description>Encrypted Okta Secret Answer</description>
        <label>Encrypted Okta Secret Answer</label>
        <length>100</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Host_ID__c</fullName>
        <label>Host ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invalid_Password_Count__c</fullName>
        <label>Invalid Password Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Non_DB_User__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To check the Non DB User</description>
        <label>Non DB User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Okta_Id__c</fullName>
        <externalId>true</externalId>
        <label>Okta Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account look up field</description>
        <label>Parent Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Interim Registrations (Parent Account)</relationshipLabel>
        <relationshipName>Interim_Registrations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ref_Key__c</fullName>
        <label>Ref Key</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration_Status__c</fullName>
        <label>Registration Status</label>
        <picklist>
            <picklistValues>
                <fullName>Registration Email Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Password and SQA Saved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registration Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Host ID/Ref Key Saved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verification Email Resend Request</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Resend_Email_Count__c</fullName>
        <label>Resend Email Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Site_Language_Value__c</fullName>
        <description>The field is used to show on the page</description>
        <label>Site Language</label>
        <picklist>
            <picklistValues>
                <fullName>English</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Japanese</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Site_Language__c</fullName>
        <label>Site Language Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Terms_Of_Use_COS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For checking the Terms of Use Agreement for Cadence Online Support Application</description>
        <label>Terms Of Use COS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Verification_Email_Sent_Date__c</fullName>
        <label>Verification Email Sent Date</label>
        <type>DateTime</type>
    </fields>
    <label>Interim Registration</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>IRN{0}</displayFormat>
        <label>Interim Registration Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interim Registrations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>